--- a/test/pipelines/pipelines-it-pai-windows.yml
+++ b/test/pipelines/pipelines-it-pai-windows.yml
@@ -63,6 +63,9 @@ jobs:
       cd test
       set PATH=$(ENV_PATH)
       python --version
+      echo $(container_nfs_mount_path)
+      echo $(pai_token)
+      echo $(nni_manager_ip)
       python nni_test/nnitest/generate_ts_config.py --ts pai --pai_host $(pai_host) --pai_user $(pai_user) --nni_docker_image $TEST_IMG --pai_storage_plugin $(pai_storage_plugin)\
        --pai_token $(pai_token) --nni_manager_nfs_mount_path $(nni_manager_nfs_mount_path) --container_nfs_mount_path $(container_nfs_mount_path) --nni_manager_ip $(nni_manager_ip)
       python nni_test/nnitest/run_tests.py --config config/integration_tests.yml --ts pai --exclude multi-phase
